# wordle-solver

./: Cargo.toml  README.md  index.txt  index2.txt  main.rs
src/: input.rs  letter.rs  main.rs  scoring.rs
